fix: fix checkins production urls
